# ai-evals

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: biology_campbell_mmlu_pro.yaml  biology_campbell_mmlu_pro_ablation.yaml  cs_clrs_mmlu_pro.yaml  physics_feynman_mmlu_pro.yaml  psychology_kahneman_mmlu_pro.yaml  quick_smoke_test.yaml  quick_smoke_test_local.yaml
evals/: coding.yaml  general_knowledge.yaml  reasoning.yaml  security.yaml
src/ai_evals/: __init__.py  analysis.py  benchmark_loader.py  cli.py  config.py  eval_loader.py  results.py  runner.py
src/ai_evals/models/: __init__.py  anthropic.py  base.py  openai.py
src/ai_evals/scorers/: __init__.py  base.py  code_execution.py  contains.py  exact_match.py  llm_judge.py  mcq.py
tests/: conftest.py  test_analysis.py  test_benchmark_loader.py  test_config.py  test_mcq.py
