[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-evals"
version = "0.1.0"
description = "Test whether re-priming LLMs with books improves task performance"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40,<1.0",
    "openai>=1.0,<3.0",
    "pydantic>=2.0,<3.0",
    "click>=8.0,<9.0",
    "pyyaml>=6.0,<7.0",
    "scipy>=1.10,<2.0",
    "rich>=13.0,<14.0",
    "python-dotenv>=1.0,<2.0",
    "datasets>=2.14,<4.0",
]

[project.scripts]
ai-evals = "ai_evals.cli:cli"

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1"]
viz = ["matplotlib>=3.7"]
stats = ["statsmodels>=0.14"]

[tool.hatch.build.targets.wheel]
packages = ["src/ai_evals"]

[tool.ruff]
line-length = 100
